implemented view user account
